--- a/style/main.css
+++ b/style/main.css
@@ -13,8 +13,21 @@ html {
   font-weight: 700;
 }
 
+/* body {
+    height: 100%;
+} */
 .content-container {
+  /* height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; */
   padding: 28px 24px;
+  max-width: 375px;
+  /* & > div {
+        width: 327px;
+        &:first-child { margin-top: auto;}
+        &:last-child {margin-bottom: auto;}
+    } */
 }
 
 .labels-container {
@@ -35,9 +48,9 @@ html {
 }
 
 .theme-label {
+  margin: auto 22px 4px auto;
   font-size: 12px;
   letter-spacing: 0.08em;
-  margin: auto 22px 4px auto;
 }
 
 /* -------------------------------- <toggle> -------------------------------- */
@@ -90,6 +103,7 @@ html {
   margin-top: 4px;
   background: #232c43;
   border-radius: 15px;
+  cursor: pointer;
 }
 
 /* Slider-thumb (Chrome, Opera, Safari, Edge) */
@@ -101,7 +115,10 @@ html {
   border: 1px solid black;
   border-radius: 15px;
   background: #d03f2f;
-  cursor: pointer;
+  /* cursor: grab;
+    &:active {
+        cursor:grabbing;
+    } */
 }
 
 /* Slider-thumb (Firefox) */
@@ -113,7 +130,102 @@ html {
   cursor: pointer;
   border-radius: 15px;
   border: 1px solid black;
+  /* cursor: -moz-grab;
+    &:active {
+        cursor: -moz-grabbing;
+    } */
 }
 
 /* ------------------------------- <toggle /> ------------------------------- */
+.screen {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 32px;
+  padding: 24px;
+  border-radius: 10px;
+  background-color: #182034;
+}
+
+.screen .screen-text {
+  font-size: 32px;
+  letter-spacing: -0.015em;
+  line-height: 1.25;
+}
+
+.keypad-container {
+  margin-top: 24px;
+  height: 420px;
+  border-radius: 10px;
+  padding: 24px 24px 28px;
+  background-color: #232c43;
+}
+
+/* -------------------------------- <keypad> -------------------------------- */
+.keypad {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (60px)[4];
+      grid-template-columns: repeat(4, 60px);
+  -ms-grid-rows: (60px)[5];
+      grid-template-rows: repeat(5, 60px);
+  grid-column-gap: 13px;
+  grid-row-gap: 17px;
+}
+
+.key {
+  border: none;
+  border-radius: 5px;
+  background-color: #eae3dc;
+  -webkit-box-shadow: 0px 4px 0px 0px #b4a597;
+          box-shadow: 0px 4px 0px 0px #b4a597;
+  cursor: pointer;
+}
+
+.key:active {
+  -webkit-transform: translateY(2px) scale(0.95);
+          transform: translateY(2px) scale(0.95);
+  -webkit-filter: brightness(80%);
+          filter: brightness(80%);
+}
+
+.key .key-text {
+  font-family: 'Spartan', sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  margin-top: 6px;
+}
+
+.key.key-long {
+  grid-column: span 2;
+}
+
+.key.key-red .key-text,
+.key.key-blue .key-text {
+  margin-top: 2px;
+  margin-right: 1px;
+  color: white;
+  font-size: 17px;
+  letter-spacing: -0.06em;
+}
+
+.key.key-blue {
+  background-color: #637097;
+  -webkit-box-shadow: 0px 4px 0px 0px #404e72;
+          box-shadow: 0px 4px 0px 0px #404e72;
+}
+
+.key.key-red {
+  background-color: #d03f2f;
+  -webkit-box-shadow: 0px 4px 0px 0px #93261a;
+          box-shadow: 0px 4px 0px 0px #93261a;
+}
+
+/* ------------------------------- <keypad /> ------------------------------- */
 /*# sourceMappingURL=main.css.map */
