--- a/style/main.scss
+++ b/style/main.scss
@@ -255,3 +255,6 @@ html {
     box-shadow       : 0px 4px 0px 0px $red-key-shadow ;
 }
 /* ------------------------------- <keypad /> ------------------------------- */
+
+
+@media screen and (min-width: 600px) { @import './desktop'; }
