--- a/style/_desktop.scss
+++ b/style/_desktop.scss
@@ -49,8 +49,8 @@
     }
 }
 
-.key.key-red,
-.key.key-blue {
+.key.key-control,
+.key.key-equals {
     .key-text {
         margin: 8px 0px 0px 1px;
         font-size: 20px;
