--- a/style/_slider_template.scss
+++ b/style/_slider_template.scss
@@ -11,7 +11,7 @@
 
 /* The slider itself */
 .toggle__slider {
-    // Resets
+    // resets
     -webkit-appearance : none;
     appearance         : none;
     outline            : none;
@@ -25,7 +25,7 @@
   
   /* Chrome, Opera, Safari, Edge */
   .toggle__slider::-webkit-slider-thumb {
-    // Resets
+    // resets
     -webkit-appearance : none    ;
     appearance         : none    ;
 
