--- a/style/main.scss
+++ b/style/main.scss
@@ -12,13 +12,14 @@
 
 
 body {
-    font-family      : 'Spartan', sans-serif ;
-    font-weight      : 700                   ;
+    font-family : 'Spartan', sans-serif ;
+    font-weight : 700                   ;
+    min-width   : 375px                 ;
 }
 
 
 .content-container {
-
+    margin: 0 auto;
     padding: 28px 24px;
     max-width: 375px;
 }
@@ -187,4 +188,4 @@ body {
 /* ------------------------------- <keypad /> ------------------------------- */
 
 
-@media screen and (min-width: 600px) { @import './desktop'; }
+@media screen and (min-width: 740px) { @import './desktop'; }
